<resources>
    <string name="app_name">LedController</string>
    <string name="controller_dest_label">Led Controller</string>
    <string name="alarm_list_dest_label">RGB Alarms</string>
    <string name="alarm_add_edit_dest_label">Alarm Details</string>
    <string name="ip_address_list_dest_label">Edit RGB-Controllers</string>
    <string name="rgb_show_dest_label">RGB Show</string>

    <string name="rgb_show">RGB Show</string>
    <string name="alarm">Alarm</string>
    <string name="controller">Controller</string>
    <string name="action_edit_ip">Edit IPs</string>
    <string name="rgb_controllers">RGB-Controllers:</string>
    <string name="add_rgb_controller">Add RGB-Controller</string>
    <string name="edit_rgb_controller">Edit RGB-Controller</string>
    <string name="enter_ip_address_name">Enter name</string>
    <string name="enter_ip_address">Enter IP address</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="are_sure_to_delete">Are you sure to delete %1$s?</string>
    <string name="invalid_ip">Invalid IP address</string>
    <string name="valid_ip">Valid IP address</string>
    <string name="no_ip_entered">No IP address entered</string>
    <string name="ip_already_exists">IP already exists</string>
    <string name="no_name_entered">No name entered</string>
    <string name="item_selected">%d selected</string>
    <string name="delete_rgb_alarm">Delete RGB alarm</string>
    <string name="add_rgb_alarm">Add RGB alarm</string>
    <string name="no_alarms_active">No RGB Alarms are active</string>

    <string name="next_alarm_in_full">Alarm in %1$s and %2$s</string>
    <string name="next_alarm_in_only_minute_or_hour">Alarm in %1$s</string>
    <plurals name="trigger_time_hour">
        <item quantity="one">%1$d hour</item>
        <item quantity="other">%1$d hours</item>
    </plurals>
    <plurals name="trigger_time_minute">
        <item quantity="one">%1$d minute</item>
        <item quantity="other">%1$d minutes</item>
    </plurals>

    <string name="monday_start_letter">M</string>
    <string name="tuesday_start_letter">T</string>
    <string name="wednesday_start_letter">W</string>
    <string name="thursday_start_letter">T</string>
    <string name="friday_start_letter">F</string>
    <string name="saturday_start_letter">S</string>
    <string name="sunday_start_letter">S</string>

    <string name="ip_addresses_preferences_file_key">com.myrgb.ledcontroller.IP_ADDRESSES</string>
    <string name="no_wifi_connection">No WiFi connection</string>
    <string name="wifi_connection_lost">WiFi connection lost</string>
</resources>